2009-10-15  Juanma Barranquero  <lekktu@gmail.com>

	* .gitignore: Add echolisp.tmp.

2009-10-15  Glenn Morris  <rgm@gnu.org>

	* emacsclient.c (print_help_and_exit): Fix bug report instructions.

	* makefile.w32-in (echolisp): New rule.
	(clean): Delete echolisp.tmp.

2009-09-27  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (OTHER_PLATFORM_SUPPORT): Add term/internal.elc,
	term/pc-win.elc, emacs-lisp/easymenu.elc, and term/ns-win.elc, to
	be consistent with src/Makefile.in.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* update-game-score.c (main): Sort scores before trimming them,
	reported by Jason Feng <jfeng@ozbert.com> (bug#4397).

2009-09-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in ($(DESTDIR)${archlibdir}): Set umask to world-readable
	before creating directories and game score files.

2009-08-19  Glenn Morris  <rgm@gnu.org>

	* cvtmail.c: Remove file.
	* Makefile.in (UTILITIES): Remove cvtmail.
	(cvtmail${EXEEXT}): Remove.

2009-07-08  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* b2m.c (main): Ensure that each message ends in two newlines.

2009-07-03  Jason Rumney  <jasonr@gnu.org>

	* emacsclient.c (w32_set_user_model_id): Use standard types.

2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (WINNT_SUPPORT): Add common-win.elc, like
	src/Makefile.in did.

2009-06-30  Jason Rumney  <jasonr@gnu.org>

	* emacsclient.c (w32_give_focus): Use GetModuleHandle for library
	that is already loaded.
	(w32_set_user_model_id): New function.
	(main): Use it to associate emacsclient with emacs (bug#1849).

2009-06-29  Jim Meyering  <meyering@redhat.com>

	Remove useless if-before-free test.
	* make-docfile.c (scan_lisp_file): Remove useless test.

2009-06-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (movemail.o): Don't pass -Demacs, unused.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2006-06-09  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* mac-fix-env.m: