@@ -1,3 +1,7 @@
+2009-11-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* emacs-lisp/bytecomp.el (byte-compile-output-file-form): Handle defvaralias.
+
 2009-11-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* descr-text.el: Require help-mode rather than help-fns (bug#4861).
