@@ -1,3 +1,7 @@
+2009-11-04  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* make-docfile.c (scan_lisp_file): Also look for `defvaralias'.
+
 2009-10-15  Juanma Barranquero  <lekktu@gmail.com>
 
 	* .gitignore: Add echolisp.tmp.
